--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "clsx": "1.2.1",
     "cmdk": "0.2.0",
     "lucide-react": "0.105.0-alpha.4",
-    "next": "13.4.4",
-    "next-sanity": "4.3.2",
+    "next": "^13.5.6",
+    "next-sanity": "7.0.1",
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-day-picker": "8.6.0",
     "react-dom": "18.2.0",
-    "sanity": "3.10.3",
+    "sanity": "^3.24.1",
     "shadcn-ui": "0.1.2",
-    "sharp": "0.31.3",
+    "sharp": "^0.33.2",
     "stripe": "12.5.0",
     "styled-components": "5.2",
     "tailwind-merge": "1.12.0",
@@ -54,7 +54,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-tailwindcss": "3.8.0",
-    "postcss": "8.4.21",
+    "postcss": "^8.4.33",
     "prettier": "2.7.1",
     "tailwindcss": "3.3.1",
     "typescript": "4.9.3"
